@@ -21,6 +21,9 @@ Changes
 Fixes
 =====
 
+ - Fixed an issue that caused ``INSERT`` statements using a subquery on the
+   `sys.shards` system table to fail.
+
  - Fixed an issue that caused wrong results for ``JOIN`` queries on 3 or more
    tables when ``ORDER BY`` clause contains columns from more than one table.
 
